# carburetor-rs

./: AGENTS.md  Cargo.toml  README.md
.agent/: macro-helper.md
carburetor/: Cargo.toml  build.rs
carburetor-macro/: Cargo.toml
carburetor-macro/src/: lib.rs  mod.rs
carburetor-macro/src/generators/: mod.rs
carburetor-macro/src/generators/backend/: mod.rs  sync.rs
carburetor-macro/src/generators/backend/diesel/: mod.rs  model.rs  table.rs
carburetor-macro/src/generators/client/: mod.rs  models.rs
carburetor-macro/src/generators/client/local_operations/: functions.rs  models.rs
carburetor-macro/src/generators/client/sync_local_db/: functions.rs
carburetor-macro/src/generators/context/: models.rs
carburetor-macro/src/generators/diesel/: migration.rs  mod.rs  model.rs  models.rs  schema.rs  table.rs
carburetor-macro/src/generators/download/: functions.rs  mod.rs  models.rs
carburetor-macro/src/generators/upload/: functions.rs  models.rs
carburetor-macro/src/helpers/: mod.rs
carburetor-macro/src/parsers/: arg.rs  attr.rs  input.rs  mod.rs  sync_group.rs
carburetor-macro/src/parsers/syntax/: block.rs  content.rs  iterative.rs  mod.rs
carburetor-macro/src/parsers/table/: column.rs  mod.rs  postgres_type.rs
carburetor-macro/tests/: macro_tests.rs
carburetor-macro/tests/macro_tests/compile/fail/backend/: duplicate_id.rs  duplicate_id.stderr  sync_non_existing_table.rs  sync_non_existing_table.stderr
carburetor-macro/tests/macro_tests/compile/pass/backend/: simple.rs
carburetor/src/: config.rs  error.rs  lib.rs  models.rs
carburetor/src/backend/: helpers.rs  mod.rs  models.rs
carburetor/src/helpers/: carburetor_offset.rs  client_sync_metadata.rs  migration.rs  mod.rs  serde_optional.rs
docs/development/: e2e-testing.md
docs/features/: basic-feature.md  column-default.md  filter-row-by-condition.md  sync-config.md
docs/features/auto-migration/: server.md
examples/: schema.rs  simple_backend.rs  simple_client.rs
tests/e2e-test/: Cargo.toml
tests/e2e-test/src/: lib.rs
tests/e2e-test/tests/: e2e-test.rs
tests/e2e-test/tests/edge_cases/: dirty_while_upload.rs  interjecting_download_while_uploading.rs  mod.rs  upload_missing_default_columns.rs
tests/e2e-test/tests/happy_paths/: backend_migration.rs  backend_operation.rs  client_operation.rs  download.rs  mod.rs  sync.rs  upload.rs
tests/e2e-test/tests/unhappy_paths/: backend.rs  backend_migration.rs  mod.rs
tests/sample-test-backend/: Cargo.toml
tests/sample-test-backend/src/: main.rs  test_database.rs  test_service.rs
tests/sample-test-core/: Cargo.toml
tests/sample-test-core/src/: lib.rs
