[workspace]

resolver = "2"
members = [
    "carburetor",
    "carburetor-macro",
    "tests/e2e-test",
    "tests/sample-test-backend",
    "tests/sample-test-core",
]

[workspace.dependencies]
carburetor = { path = "carburetor", version = "0.1.0" }
carburetor-macro = { path = "carburetor-macro", version = "0.1.0" }
sample-test-backend = { path = "tests/sample-test-backend", version = "0.1.0" }
sample-test-core = { path = "tests/sample-test-core", version = "0.1.0" }
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"
diesel = "2.2"
trybuild = "1.0"
tokio = "1.49"
chrono = "0.4"
thiserror = "2.0"
anyhow = "1.0"
heck = "0.5"
strum = "0.27"
derive_more = "2.1"
serde = "1.0"
serde_json = "1.0"
axum = "0.8.8"
testcontainers = "0.23"
testcontainers-modules = "0.11"
tarpc = "0.37.0"
futures = "0.3.31"

[package]
name = "carburetor-example"
version = "0.1.0"
edition = "2024"

[dependencies]
carburetor = { workspace = true }
diesel = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
chrono = { workspace = true }

[[example]]
name = "simple-backend"
path = "examples/simple_backend.rs"

[[example]]
name = "simple-client"
path = "examples/simple_client.rs"

[features]
default = []
backend = ["carburetor/backend"]
client = ["carburetor/client"]
