[package]
name = "carburetor-macro"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["full", "extra-traits"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }
heck = { workspace = true }
strum = { workspace = true, features = ["derive"] }
derive_more = { workspace = true, features = ["display"] }

[dev-dependencies]
carburetor = { workspace = true, features = ["backend"] }
diesel = { workspace = true, features = ["postgres", "chrono"] }
trybuild = { workspace = true }

[features]
default = []
backend = ["carburetor/backend"]
