[package]
name = "carburetor-macro"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["full", "extra-traits"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }
heck = { workspace = true }
strum = { workspace = true, features = ["derive"] }
derive_more = { workspace = true, features = ["display"] }

[features]
default = []
backend = []
client = []
