[package]
name = "carburetor-macro"
description = "Macro for carburetor library, for building local-first app with LWW register CRDT."
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["full", "extra-traits"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }
heck = { workspace = true }
strum = { workspace = true, features = ["derive"] }
derive_more = { workspace = true, features = ["display"] }
