[package]
name = "carburetor"
description = "Rust library for building local-first app with LWW register CRDT."
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
carburetor-macro = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
diesel = { workspace = true, features = ["chrono", "serde_json"] }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[features]
default = []
backend = ["carburetor-macro/backend", "diesel/postgres"]
client = [
    "carburetor-macro/client",
    "diesel/sqlite",
    "diesel/returning_clauses_for_sqlite_3_35",
]
