[package]
name = "carburetor"
description = "Rust library for building local-first app with LWW register CRDT."
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true

[package.metadata.docs.rs]
features = ["_docs"]

[dependencies]
carburetor-macro = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
diesel = { workspace = true, features = ["chrono", "serde_json"] }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[features]
default = []
# This feature is used to allow docs to build correctly
_docs = ["diesel/postgres", "diesel/sqlite"]
