[package]
name = "e2e-test"
version.workspace = true
edition.workspace = true

[dependencies]
carburetor = { workspace = true }
diesel = { workspace = true, features = [
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
] }
nix = { version = "0.29", features = ["signal", "process"] }
sample-test-core = { workspace = true }
tarpc = { workspace = true, features = ["serde-transport-bincode", "tcp"] }
tempfile.workspace = true
tokio = { workspace = true, features = ["full"] }
