[package]
name = "sample-test-backend"
version.workspace = true
edition.workspace = true

[dependencies]
carburetor.workspace = true
diesel = { workspace = true, features = ["postgres"] }
futures.workspace = true
sample-test-core.workspace = true
tarpc = { workspace = true, features = ["serde-transport-bincode", "tcp"] }
testcontainers.workspace = true
testcontainers-modules = { workspace = true, features = ["postgres"] }
tokio = { workspace = true, features = ["full"] }

[features]
default = []
backend = ["carburetor/backend", "sample-test-core/backend"]
